# chip8-python

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json  postStart.sh
chip8/: cpu.py  main.py  memory.py  register.py  screen.py  vt100.py
tests/: test_cpu.py
