[tool.poetry]
name = "chip8-python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.1"
mypy = "^1.10.0"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["chip8"]

[tool.ruff]
target-version = "py311"
line-length = 119
exclude = [".mypy_cache"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C90"]
